[project]
name = "single-prompt-optimizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=0.3.75",
    "langchain-google-genai>=2.1.10",
    "langchain-ollama>=0.3.7",
    "langmem>=0.0.29",
    "streamlit>=1.49.1",
]
